# Visionary

./: .gitignore  README.md  sample.txt
backend/: config.py  database.py  main.py  models.py  pyproject.toml  schemas.py
backend/graph/: nodes.py  prompts.py  state.py  workflow.py
backend/routers/: files.py  specs.py  versions.py
backend/services/: file_parser.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: FileUploader.tsx  TiptapEditor.tsx
frontend/src/hooks/: useSSE.ts
frontend/src/pages/: CreateSpec.tsx  Dashboard.tsx  ViewSpec.tsx
