[project]
name = "visionary-backend"
version = "0.1.0"
description = "Solutions Refiner v1 - AI-powered spec generation"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn>=0.30",
    "sqlalchemy>=2.0",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "pydantic-settings>=2.0",
    "langchain-openai>=0.3",
    "langgraph>=0.4",
    "langsmith>=0.3",
    "pdfplumber>=0.11",
    "python-docx>=1.1",
    "Pillow>=11",
    "python-multipart>=0.0.9",
]
